# PatchMaker

./: CMakeLists.txt  README.md  comparator.cpp  main.cpp
tests/: CMakeLists.txt  comparator.cpp
tests/test1/: patch.txt
tests/test2/: i3.txt  output.txt  patch.txt
tests/test3/: i1.txt  i3.txt  patch.txt
tests/test4/: i2.txt  patch.txt
tests/test5/: patch.txt
tests/test6/: i1.txt  i2.txt  i3.txt
